fix overflow-x on chrome

--- a/indexPage.css
+++ b/indexPage.css
@@ -10,6 +10,10 @@
     src: url("res/NotoSans-Regular.ttf");
 }
 
+html{
+    overflow-x: hidden;
+}
+
 body{
     margin: 0;
     font-family: 'Noto Sans', sans-serif;
